--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
+  "homepage": "https://evanc108.github.io/evanc108",
   "name": "app",
-  "homepage": "https://evanc108.github.io/app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,12 +30,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
